config/podzone-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: podzone-dashboard-ingress
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: podzone-ingress-class
  tls:
  - hosts:
    - dashboard.southern.podzone.net
    secretName: dashboard-cert
  rules:
  - host: dashboard.southern.podzone.net
    http:
      paths:
      - backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
        path: /
        pathType: Prefix
